Added Branding Guideline

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/grid.css" rel="stylesheet" />
     <link href="css/token.css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans"
-      rel="stylesheet"
-    />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
@@ -29,6 +30,33 @@
         </div>
       </nav>
     </header>
+
+    <section id="branding_idea" class="element-main">
+      <h2>Branding Idea</h2>
+
+      <section class ="element">
+        <div class="grid element-grid">
+          <h3>About Us</h3>
+          <p>Nebula is an online cosmetic to serve as a tool for an expression of individuality, creativity, and confidence. Born from a passion for beauty and innovation, Nebula is a celestial fusion of artistry and science, offering a cosmic array of makeup products designed to empower and inspire. </p>
+        </div>
+      </section>
+
+      <section class ="element">
+        <div class="grid element-grid">
+          <h3>Our Company to Potential Customers</h3>
+          <p>At Nebula, you can embark on a cosmic journey of self-expression and empowerment where beauty knows no bounds and every product tells a story. We celebrate diversity and believe that beauty knows no bounds as inclusivity is at the heart of everything we do. We aim to help everyone can find their perfect match and unleash their inner star.</p>
+        </div>
+      </section>
+
+      <section class ="element">
+        <div class="grid element-grid">
+          <h3>Enticing Customers to Purchase our Product</h3>
+          <p>Nebula differentiate itself by offering unique and trend-setting makeup products that stand out in the market. Whether it's innovative formulations, captivating packaging, or limited-edition collections inspired by celestial themes, Nebula piques customers' curiosity and desire to try something new. On top of that, Nebula is inclusive and ensures </p>
+        </div>
+      </section>
+
+    </section>
+
 
     <section class="shop-banner">
       <h1 class="shop-title">All Products</h1>
