Finalized Interactive Elements
Added CSS for all the elements and then finalized the code for the interactive elements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Echo Style Guide</title>
+    <title>Nebula Style Guide</title>
 
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/grid.css" rel="stylesheet" />
@@ -63,13 +63,14 @@
           <h3>Navigation Link</h3>
 
           <h4>CSS selector</h4>
-          <p>.btn, .btn-primary</p>
+          <p>.btn, .btn-primary, .btn-secondary</p>
 
           <h4>Sample code</h4>
           <code>&lt;a class="btn btn-primary" href="#"&gt;Navigation Button&lt;/a&gt;</code>
 
           <h4>Rendered element</h4>
           <a class="btn btn-primary" href="#">Primary Button</a>
+          <a class="btn btn-secondary" href="#">Secondary Button</a>
         </div>
       </section>
 
@@ -82,10 +83,10 @@
           <p>.in-text-link</p>
 
           <h4>Sample code</h4>
-          <code>&lt;p&gt;This is a &lt;a class="in-text-link" href="https://figmashort.link/e53sp5">link.&lt;/a&gt;&lt;/p&gt;</code>
+          <code>&lt;p&gt;This is a &lt;a class="in-text-link" href="https://figmashort.link/ncmeiH">link.&lt;/a&gt;&lt;/p&gt;</code>
 
           <h4>Rendered element</h4>
-          <p>This is a <a class="in-text-link" href="https://figmashort.link/e53sp5">link.</a></p>
+          <p>This is a <a class="in-text-link" href="https://figmashort.link/ncmeiH">link.</a></p>
         </div>
       </section>
 
@@ -124,7 +125,7 @@
 
           <h4>Rendered element</h4>
           <form>
-            <label for="question">What are you looking for?</label>
+            <label for="question">What product are you looking for?</label>
             <input type="text" id="question" placeholder="Type here...">
           </form>
         </div>
@@ -135,7 +136,7 @@
           <h3>Radio Button</h3>
 
           <h4>CSS selector</h4>
-          <p>..radio-container, .radio-group, .radio-label, .radio-input-group</p>
+          <p>.radio-container, .radio-group, .radio-label, .radio-input-group</p>
 
           <h4>Sample code</h4>
           <code>
@@ -201,16 +202,13 @@
           <p>.img, .img-product</p>
 
           <h4>Sample code</h4>
-          <code>&lt;a href="https://figmashort.link/e53sp5"&gt; &lt;img class="img img-product" src="img/rem.jpg" alt="Ariana Grande Rem Vinyl Record"&gt; &lt;/a&gt;</code>
+          <code>&lt;a href="https://figmashort.link/ncmeiH"&gt; &lt;img class="img img-product" src="img/rem.jpg" alt="Ariana Grande Rem Vinyl Record"&gt; &lt;/a&gt;</code>
 
           <h4>Rendered element</h4>
-          <a href="https://figmashort.link/e53sp5"> <img class="img img-product" src="img/rem.jpg" alt="Ariana Grande Rem Vinyl Record"> </a>
+          <a href="https://figmashort.link/ncmeiH"> <img class="img img-product" src="img/rem.jpg" alt="Essential Lip Drip Oil"> </a>
         </div>
       </section>
-
     </section>
-
-
 
     <section class="shop-banner">
       <h1 class="shop-title">All Products</h1>
