Fixed Image Links

--- a/index.html
+++ b/index.html
@@ -206,11 +206,10 @@
           <code>&lt;a href="https://figmashort.link/ncmeiH"&gt; &lt;img class="img img-product" src="img/rem.jpg" alt="Ariana Grande Rem Vinyl Record"&gt; &lt;/a&gt;</code>
 
           <h4>Rendered element</h4>
-          <a href="https://figmashort.link/ncmeiH"> <img class="img img-product" src="img/rem.jpg" alt="Essential Lip Drip Oil"> </a>
+          <a href="https://figmashort.link/ncmeiH"> <img class="img img-product"src="img/essential-drip-lip-oil.png" alt="Essential Lip Drip Oil"> </a>
         </div>
       </section>
     </section>
-
 
     <!-- Rendered Element Section --> 
 
