Naming Conventions, New Images, Updated Product Page

--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -265,6 +265,9 @@
                 </div>
                 <h5 class="product-color">Lavander Kiss</h5>
                 <h4 class="product-name">Essential Drip Lip Oil</h4>
+                <div class="image-container-colors">
+                  <img class="img img-product" src="img/essential-drip-lip-oil-color.png" alt="Essential Drip Lip Oil Color Options">
+                </div>
                 <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
 
@@ -274,6 +277,9 @@
               </div>
                 <h5 class="product-color">Miss Neptune</h5>
                 <h4 class="product-name">Highlighter Topper</h4>
+                <div class="image-container-colors">
+                  <img class="img img-product" src="img/highlight-topper-color.png" alt="LHighlight Topper Color Options">
+                </div>
                 <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
 
@@ -283,6 +289,9 @@
               </div>
                 <h5 class="product-color">Lab Coat</h5>
                 <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
+                <div class="image-container-colors">
+                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow-color.png" alt="Lustrous Liquid Eyeshadow Color Options">
+                </div>
                 <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
             </div>
